--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,6 +10,7 @@
     --font-sans: "Instrument Sans", ui-sans-serif, system-ui, sans-serif,
         "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
         "Noto Color Emoji";
+    --color-primary: #15B392;
 }
 
 input:-webkit-autofill {
@@ -22,3 +23,4 @@ swiper-container {
     --swiper-pagination-bullet-inactive-color: white;
     --swiper-pagination-bottom: 2rem;
 }
+
