--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,7 +10,9 @@
     --font-sans: "Instrument Sans", ui-sans-serif, system-ui, sans-serif,
         "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
         "Noto Color Emoji";
-    --color-primary: #15B392;
+    --color-primary: #15b392;
+    --color-text: #54c392;
+    --breakpoint-xs: 375px;
 }
 
 input:-webkit-autofill {
@@ -23,4 +25,3 @@ swiper-container {
     --swiper-pagination-bullet-inactive-color: white;
     --swiper-pagination-bottom: 2rem;
 }
-
